src/antlr/TheLangParser.java
// Generated from .\src\TheLang.g by ANTLR 4.5.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TheLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, ASSIGN=3, SEMI=4, GT=5, GE=6, LT=7, LE=8, EQ=9, NEQ=10, PLUS=11, 
		MINUS=12, MUL=13, DIV=14, NOT=15, LPAREN=16, RPAREN=17, LBRACE=18, RBRACE=19, 
		LBRACKET=20, RBRACKET=21, COLON=22, IF=23, THEN=24, ELSE=25, FI=26, WHILE=27, 
		DO=28, OD=29, SKIP=30, WRITE=31, READ=32, PROGRAM=33, END=34, TRUE=35, 
		FALSE=36, INT=37, LOW=38, HIGH=39, COMMENT=40, INTEGER=41, IDENTIFIER=42, 
		WS=43;
	public static final int
		RULE_aexpr = 0, RULE_aexpr1 = 1, RULE_aexpr2 = 2, RULE_aexpr3 = 3, RULE_bexpr = 4, 
		RULE_bexpr1 = 5, RULE_bexpr2 = 6, RULE_opr = 7, RULE_decl = 8, RULE_level = 9, 
		RULE_stmt = 10, RULE_assignStmt = 11, RULE_skipStmt = 12, RULE_readStmt = 13, 
		RULE_writeStmt = 14, RULE_ifStmt = 15, RULE_whileStmt = 16, RULE_program = 17;
	public static final String[] ruleNames = {
		"aexpr", "aexpr1", "aexpr2", "aexpr3", "bexpr", "bexpr1", "bexpr2", "opr", 
		"decl", "level", "stmt", "assignStmt", "skipStmt", "readStmt", "writeStmt", 
		"ifStmt", "whileStmt", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'&'", "'|'", "':='", "';'", "'>'", "'>='", "'<'", "'<='", "'='", 
		"'!='", "'+'", "'-'", "'*'", "'/'", "'!'", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "':'", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", 
		"'od'", "'skip'", "'write'", "'read'", "'program'", "'end'", "'true'", 
		"'false'", "'int'", "'low'", "'high'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "AND", "OR", "ASSIGN", "SEMI", "GT", "GE", "LT", "LE", "EQ", "NEQ", 
		"PLUS", "MINUS", "MUL", "DIV", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACKET", "RBRACKET", "COLON", "IF", "THEN", "ELSE", "FI", "WHILE", 
		"DO", "OD", "SKIP", "WRITE", "READ", "PROGRAM", "END", "TRUE", "FALSE", 
		"INT", "LOW", "HIGH", "COMMENT", "INTEGER", "IDENTIFIER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TheLang.g"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TheLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AexprContext extends ParserRuleContext {
		public List<Aexpr1Context> aexpr1() {
			return getRuleContexts(Aexpr1Context.class);
		}
		public Aexpr1Context aexpr1(int i) {
			return getRuleContext(Aexpr1Context.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(TheLangParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(TheLangParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(TheLangParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(TheLangParser.MINUS, i);
		}
		public AexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterAexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitAexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitAexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AexprContext aexpr() throws RecognitionException {
		AexprContext _localctx = new AexprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			aexpr1();
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				setState(41);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(37);
					match(PLUS);
					setState(38);
					aexpr1();
					}
					break;
				case MINUS:
					{
					setState(39);
					match(MINUS);
					setState(40);
					aexpr1();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aexpr1Context extends ParserRuleContext {
		public List<Aexpr2Context> aexpr2() {
			return getRuleContexts(Aexpr2Context.class);
		}
		public Aexpr2Context aexpr2(int i) {
			return getRuleContext(Aexpr2Context.class,i);
		}
		public List<TerminalNode> MUL() { return getTokens(TheLangParser.MUL); }
		public TerminalNode MUL(int i) {
			return getToken(TheLangParser.MUL, i);
		}
		public List<TerminalNode> DIV() { return getTokens(TheLangParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(TheLangParser.DIV, i);
		}
		public Aexpr1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpr1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterAexpr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitAexpr1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitAexpr1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aexpr1Context aexpr1() throws RecognitionException {
		Aexpr1Context _localctx = new Aexpr1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_aexpr1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			aexpr2();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MUL || _la==DIV) {
				{
				setState(51);
				switch (_input.LA(1)) {
				case MUL:
					{
					setState(47);
					match(MUL);
					setState(48);
					aexpr2();
					}
					break;
				case DIV:
					{
					setState(49);
					match(DIV);
					setState(50);
					aexpr2();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aexpr2Context extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(TheLangParser.MINUS, 0); }
		public Aexpr3Context aexpr3() {
			return getRuleContext(Aexpr3Context.class,0);
		}
		public Aexpr2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpr2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterAexpr2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitAexpr2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitAexpr2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aexpr2Context aexpr2() throws RecognitionException {
		Aexpr2Context _localctx = new Aexpr2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_aexpr2);
		try {
			setState(59);
			switch (_input.LA(1)) {
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(MINUS);
				setState(57);
				aexpr3();
				}
				break;
			case LPAREN:
			case INTEGER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				aexpr3();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aexpr3Context extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TheLangParser.IDENTIFIER, 0); }
		public TerminalNode LBRACKET() { return getToken(TheLangParser.LBRACKET, 0); }
		public AexprContext aexpr() {
			return getRuleContext(AexprContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(TheLangParser.RBRACKET, 0); }
		public TerminalNode INTEGER() { return getToken(TheLangParser.INTEGER, 0); }
		public TerminalNode LPAREN() { return getToken(TheLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TheLangParser.RPAREN, 0); }
		public Aexpr3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpr3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterAexpr3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitAexpr3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitAexpr3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aexpr3Context aexpr3() throws RecognitionException {
		Aexpr3Context _localctx = new Aexpr3Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_aexpr3);
		int _la;
		try {
			setState(73);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(IDENTIFIER);
				setState(66);
				_la = _input.LA(1);
				if (_la==LBRACKET) {
					{
					setState(62);
					match(LBRACKET);
					setState(63);
					aexpr();
					setState(64);
					match(RBRACKET);
					}
				}

				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(INTEGER);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				match(LPAREN);
				setState(70);
				aexpr();
				setState(71);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BexprContext extends ParserRuleContext {
		public List<Bexpr1Context> bexpr1() {
			return getRuleContexts(Bexpr1Context.class);
		}
		public Bexpr1Context bexpr1(int i) {
			return getRuleContext(Bexpr1Context.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(TheLangParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(TheLangParser.OR, i);
		}
		public BexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterBexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitBexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitBexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BexprContext bexpr() throws RecognitionException {
		BexprContext _localctx = new BexprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bexpr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			bexpr1();
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					match(OR);
					setState(77);
					bexpr1();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bexpr1Context extends ParserRuleContext {
		public List<Bexpr2Context> bexpr2() {
			return getRuleContexts(Bexpr2Context.class);
		}
		public Bexpr2Context bexpr2(int i) {
			return getRuleContext(Bexpr2Context.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(TheLangParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(TheLangParser.AND, i);
		}
		public Bexpr1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterBexpr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitBexpr1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitBexpr1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bexpr1Context bexpr1() throws RecognitionException {
		Bexpr1Context _localctx = new Bexpr1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_bexpr1);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			bexpr2();
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(84);
					match(AND);
					setState(85);
					bexpr2();
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bexpr2Context extends ParserRuleContext {
		public List<AexprContext> aexpr() {
			return getRuleContexts(AexprContext.class);
		}
		public AexprContext aexpr(int i) {
			return getRuleContext(AexprContext.class,i);
		}
		public OprContext opr() {
			return getRuleContext(OprContext.class,0);
		}
		public TerminalNode NOT() { return getToken(TheLangParser.NOT, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(TheLangParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(TheLangParser.FALSE, 0); }
		public TerminalNode LPAREN() { return getToken(TheLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TheLangParser.RPAREN, 0); }
		public Bexpr2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterBexpr2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitBexpr2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitBexpr2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bexpr2Context bexpr2() throws RecognitionException {
		Bexpr2Context _localctx = new Bexpr2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_bexpr2);
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				aexpr();
				setState(92);
				opr();
				setState(93);
				aexpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(NOT);
				setState(96);
				bexpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(TRUE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(FALSE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				match(LPAREN);
				setState(100);
				bexpr();
				setState(101);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OprContext extends ParserRuleContext {
		public TerminalNode GT() { return getToken(TheLangParser.GT, 0); }
		public TerminalNode GE() { return getToken(TheLangParser.GE, 0); }
		public TerminalNode LT() { return getToken(TheLangParser.LT, 0); }
		public TerminalNode LE() { return getToken(TheLangParser.LE, 0); }
		public TerminalNode EQ() { return getToken(TheLangParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(TheLangParser.NEQ, 0); }
		public OprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterOpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitOpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitOpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OprContext opr() throws RecognitionException {
		OprContext _localctx = new OprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_opr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GE) | (1L << LT) | (1L << LE) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TheLangParser.INT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TheLangParser.IDENTIFIER, 0); }
		public TerminalNode SEMI() { return getToken(TheLangParser.SEMI, 0); }
		public LevelContext level() {
			return getRuleContext(LevelContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(TheLangParser.LBRACKET, 0); }
		public TerminalNode INTEGER() { return getToken(TheLangParser.INTEGER, 0); }
		public TerminalNode RBRACKET() { return getToken(TheLangParser.RBRACKET, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if (_la==LOW || _la==HIGH) {
				{
				setState(107);
				level();
				}
			}

			setState(110);
			match(INT);
			setState(111);
			match(IDENTIFIER);
			setState(115);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(112);
				match(LBRACKET);
				setState(113);
				match(INTEGER);
				setState(114);
				match(RBRACKET);
				}
			}

			setState(117);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelContext extends ParserRuleContext {
		public TerminalNode LOW() { return getToken(TheLangParser.LOW, 0); }
		public TerminalNode HIGH() { return getToken(TheLangParser.HIGH, 0); }
		public LevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_level; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitLevel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LevelContext level() throws RecognitionException {
		LevelContext _localctx = new LevelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_level);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==LOW || _la==HIGH) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public SkipStmtContext skipStmt() {
			return getRuleContext(SkipStmtContext.class,0);
		}
		public ReadStmtContext readStmt() {
			return getRuleContext(ReadStmtContext.class,0);
		}
		public WriteStmtContext writeStmt() {
			return getRuleContext(WriteStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheLangListener ) ((TheLangListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TheLangVisitor ) return ((TheLangVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stmt);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				assignStmt();
				}
				break;
			case SKIP:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				skipStmt();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				readStmt();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				writeStmt();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				ifStmt();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				whileStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
